2005-10-01  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_add_image): Remove utf8 validate check
	(gnome_wp_props_wp_set): If the filename we have for the image is not
	valid utf8, convert it to utf8 before setting the key in gconf
	(gnome_wp_load_stuffs, gnome_wp_file_changed): Make sure that the
	filename is valid utf8 and the file exists with utf8 encoding, or fall
	back to filename encoding as specified by the user with glib's
	environment variables

	* gnome-wpitem.c (gnome_wp_item_new): Make sure that the name field
	is always utf8 for displaying to the user with the tree view

	* gnome-wp-xml.c (gnome_wp_xml_load_xml): Make sure that the
	filename is valid utf8 and the file exists with utf8 encoding, or fall
	back to filename encoding as specified by the user with glib's
	environment variables
	(gnome_wp_xml_save_list): If the filename is not valid utf8, then
	convert to utf8 for storing in the XML file

	Fixes #168604

2005-09-06  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Set the style
	property "action-area-border" for the GtkDialogs here

	"Fixes" #313680

2005-08-21  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_option_menu_set): If the value for
	the "picture_options" key is set to "none", don't set the optin menu
	for the scaling options to tiled

	Fixes #313883

2005-08-17  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Replace the changing
	of some GtkDialog defaults through style properties with calls to
	gtk_widget_ensure_style and gtk_container_set_border_width

	Fixes #313680

2005-08-15  Veerapuram Varadhan <vvaradhan@novell.com>

	* gnome-wp-capplet.c (gnome_wp_props_wp_set):
	(gnome_wp_color[12]_changed, gnome_wp_options_changed):
	(gnome_wp_shading_changed, wallpaper_properties_init):
	Enable/disable the style-menu, shading-menu and color-picker
	buttons w.r.t gconf-keys.