@@ -1,3 +1,8 @@
+2005-10-05  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gnome-wp-capplet.c: (wallpaper_properties_init):  Add an image
+	filter to the file chooser.
+	
 2005-10-01  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-capplet.c (gnome_wp_add_image): Remove utf8 validate check
